# CG

./: CMakeCache.txt  Makefile  README.md  main  main.cpp  posicoes_camera.txt
atual/projeto/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  teste  teste.cpp
atual/projeto/cenario/: cenario.cpp  cenario.h
atual/projeto/externo/: alinear.cpp  alinear.h  luz.cpp  luz.h  renderizar.cpp  renderizar.h
atual/projeto/objeto/: objeto.h
atual/projeto/objetos/: cilindro.cpp  cilindro.h  cone.cpp  cone.h  cubo.h  esfera.cpp  esfera.h  malha.cpp  malha.h  plano.cpp  plano.h  teste.cpp  teste.h
atual/projeto/ray/: raio.cpp  raio.h
atual/projeto/tela/: camera.cpp  camera.h  janela.cpp  pick.h  textura.cpp  textura.h
cenario/: cenario.cpp  cenario.h
externo/: alinear.cpp  alinear.h  luz.cpp  renderizar.cpp  renderizar.h
novo/: main.cpp  programa
novo/externo/: alinear.cpp  alinear.h  luz.cpp  luz.h  renderizar.cpp
novo/objeto/: objeto.h
novo/objetos/: esfera.cpp  esfera.h
novo/tela/: canvas.h
objetos/: cilindro.cpp  cilindro.h  cone.cpp  cone.h  cubo.cpp  esfera.cpp  esfera.h  malha.cpp  plano.cpp  plano.h
snowman/: Makefile  main  main.cpp  programa
snowman/cenario/: cenario.cpp
snowman/externo/: luz.cpp  luz.h  renderizar.cpp
snowman/objetos/: esfera.cpp  esfera.h
snowman/tela/: janela.h
task_1/: Makefile  alinear.cpp  alinear.h  canvas.cpp  canvas.h  esfera.cpp  esfera.h  janela.cpp  main.cpp  programa  raio.cpp  raio.h  renderizar.cpp  renderizar.h
task_2/: Makefile  main.cpp  makefile  programa
task_2/externo/: alinear.cpp  alinear.h  iluminacao.cpp  iluminacao.h  renderizar.cpp  renderizar.h
task_2/objeto/: objeto.h
task_2/objetos/: esfera.cpp  esfera.h
task_2/ray/: raio.cpp  raio.h
task_2/task_2/objeto/: objeto.h
task_2/task_2/tela/: canvas.cpp
task_2/tela/: canvas.cpp  canvas.h  janela.cpp
task_3/: main.cpp  makefile  programa
task_3/cenario/: cenario.cpp  cenario.h
task_3/externo/: luz.cpp  renderizar.cpp
task_3/objeto/: objeto.h
task_3/objetos/: esfera.cpp  esfera.h
task_4/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
task_4/externo/: alinear.cpp  luz.cpp  luz.h
task_4/objeto/: objeto.h
task_4/objetos/: cone.h  esfera.cpp  plano.cpp
tela/: camera.cpp  camera.h  canvas.cpp  janela.cpp  janela.h
